removed padding to solve issue in news overflow

--- a/src/components/pages/news/newsSass.scss
+++ b/src/components/pages/news/newsSass.scss
@@ -29,7 +29,6 @@ width: 100%;
     }
   }
   .news-grid {
-    padding: 2rem;
     width: 100%;
     display: flex;
     flex-flow: row wrap;
